--- a/blocks/header/__menu-items/header__menu-items.css
+++ b/blocks/header/__menu-items/header__menu-items.css
@@ -5,4 +5,11 @@
 	display: grid;
 	grid-template-columns: repeat(2, max-content);
 	column-gap: 24px;
+	justify-self: flex-end;
+}
+
+@media screen and (min-width: 475px) {
+	.header__menu-items {
+		column-gap: 48px;
+	}
 }
