--- a/blocks/about-me/__text-content/about-me__text-content.css
+++ b/blocks/about-me/__text-content/about-me__text-content.css
@@ -1,9 +1,9 @@
 .about-me__text-content {
+	grid-area: paragraph;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
-	row-gap: 16px;
+	row-gap: 24px;
 }
