--- a/blocks/about-me/__text/about-me__text.css
+++ b/blocks/about-me/__text/about-me__text.css
@@ -8,3 +8,24 @@
 	color: #000;
 	line-height: 130%;
 }
+
+@media screen and (min-width: 768px) {
+	.about-me__text {
+		font-size: 24px;
+		line-height: 160%;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.about-me__text {
+		font-size: 18px;
+		line-height: 150%;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.about-me__text {
+		font-size: 24px;
+		line-height: 120%;
+	}
+}
