--- a/blocks/direction/__image/direction__image.css
+++ b/blocks/direction/__image/direction__image.css
@@ -3,9 +3,22 @@
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	min-height: 250px;
-	object-fit: cover;
+	height: 100%;
+
+	object-fit: fill;
 	grid-row: 1/4;
 	grid-column: 1/1;
 	z-index: 0;
+}
+
+@media screen and (min-width: 1024px) {
+	.direction__image {
+		min-height: 300px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.direction__image {
+		min-height: 455px;
+	}
 }
