--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,3 +11,11 @@
 	column-gap: 16px;
 	align-items: center;
 }
+
+@media screen and (min-width: 1280px) {
+	.footer__copyright {
+		font-size: 36px;
+		align-self: flex-end;
+		column-gap: 40px;
+	}
+}
