--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,13 @@
 .footer__link {
 	display: grid;
-	grid-template-columns: 40px 1fr;
+	grid-template-columns: 65px 1fr;
 	grid-template-rows: 1fr;
 	column-gap: 16px;
 	align-items: center;
+}
+
+@media screen and (min-width: 1280px) {
+	.footer__link {
+		column-gap: 40px;
+	}
 }
