--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,30 @@
 .footer {
 	box-sizing: border-box;
 	margin: 0;
-	padding: 0;
+	padding: 50px 16px;
 	width: 100%;
 	background-color: #ccc;
-	padding: 30px 0;
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+}
+
+@media screen and (min-width: 425px) {
+	.footer {
+		padding: 50px 24px;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.footer {
+		padding: 50px 48px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.footer {
+		padding: 75px 70px;
+		flex-direction: row;
+		justify-content: space-between;
+	}
 }
