--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,4 +1,33 @@
 .header__title {
 	position: relative;
 	z-index: 2;
+	max-width: 85%;
+	align-self: flex-start;
+}
+
+@media screen and (min-width: 475px) {
+	.header__title {
+		margin: 0;
+		padding: 80px 24px;
+		font-size: 44px;
+		line-height: 160%;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.header__title {
+		padding-left: 80px;
+		font-size: 52px;
+		letter-spacing: 2px;
+		line-height: 163%;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.header__title {
+		padding-left: 70px;
+		font-size: 100px;
+		letter-spacing: 2px;
+		line-height: 163%;
+	}
 }
