--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -14,3 +14,15 @@
 .link:hover {
 	opacity: 0.5;
 }
+
+@media screen and (min-width: 768px) {
+	.link {
+		font-size: 24px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.link {
+		font-size: 36px;
+	}
+}
