--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -5,3 +5,17 @@
 	max-width: 32px;
 	width: 100%;
 }
+
+@media screen and (min-width: 768px) {
+	.logo {
+		min-width: 44px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.logo {
+		min-width: 45px;
+		max-height: 60px;
+		object-fit: fill;
+	}
+}
