--- a/blocks/portfolio-name/portfolio-name.css
+++ b/blocks/portfolio-name/portfolio-name.css
@@ -11,7 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: flex-end;
+	align-items: center;
+	justify-items: center;
 	z-index: 0;
 }
 
@@ -25,4 +26,16 @@
 	z-index: 0;
 	background-color: rgb(5, 5, 5);
 	opacity: 0.85;
+}
+
+@media screen and (min-width: 768px) {
+	.portfolio-name {
+		min-height: 450px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.portfolio-name {
+		min-height: 720px;
+	}
 }
