--- a/blocks/root/__about-me/root__about-me.css
+++ b/blocks/root/__about-me/root__about-me.css
@@ -2,3 +2,15 @@
 	box-sizing: border-box;
 	margin-bottom: 50px;
 }
+
+@media screen and (min-width: 768px) {
+	.root__about-me {
+		margin-bottom: 80px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.root__about-me {
+		margin-bottom: 100px;
+	}
+}
