--- a/blocks/root/__direction/root__direction.css
+++ b/blocks/root/__direction/root__direction.css
@@ -4,3 +4,15 @@
 	margin: 0;
 	margin-bottom: 50px;
 }
+
+@media screen and (min-width: 768px) {
+	.root__direction {
+		margin-bottom: 80px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.root__direction {
+		margin-bottom: 100px;
+	}
+}
