--- a/blocks/about-me/__subtitle/about-me__subtitle.css
+++ b/blocks/about-me/__subtitle/about-me__subtitle.css
@@ -1,17 +1,22 @@
 .about-me__subtitle {
+	line-height: 163%;
+}
+
+@media screen and (min-width: 475px) {
+	.about-me__subtitle {
+		font-size: 18px;
+	}
 }
 
 @media screen and (min-width: 768px) {
 	.about-me__subtitle {
 		font-size: 24px;
-		line-height: 163%;
 	}
 }
 
 @media screen and (min-width: 1024px) {
 	.about-me__subtitle {
 		font-size: 18px;
-		line-height: 160%;
 	}
 }
 
