--- a/blocks/about-me/__text-content/about-me__text-content.css
+++ b/blocks/about-me/__text-content/about-me__text-content.css
@@ -7,3 +7,9 @@
 	grid-template-columns: 1fr;
 	row-gap: 24px;
 }
+
+@media screen and (min-width: 1024px) {
+	.about-me__text-content {
+		row-gap: 24px;
+	}
+}
