--- a/blocks/about-me/__title-box/about-me__title-box.css
+++ b/blocks/about-me/__title-box/about-me__title-box.css
@@ -7,13 +7,13 @@
 	align-self: center;
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 475px) {
 	.about-me__title-box {
 		grid-area: title-box;
 		display: grid;
 		grid-template-columns: 1fr;
 		grid: template rows 1fr;
-		row-gap: 24px;
+		row-gap: 48px;
 		align-self: center;
 	}
 }
@@ -23,6 +23,13 @@
 		row-gap: 40px;
 	}
 }
+
+@media screen and (min-width: 1024px) {
+	.about-me__title-box {
+		row-gap: 30px;
+	}
+}
+
 @media screen and (min-width: 1280px) {
 	.about-me__title-box {
 		row-gap: 36px;
