--- a/blocks/direction/__item/direction__item.css
+++ b/blocks/direction/__item/direction__item.css
@@ -1,10 +1,10 @@
 .direction__item {
-	position: relative;
 	box-sizing: border-box;
-	min-height: 300px;
+	position: relative;
+	min-height: 200px;
 	display: grid;
 	grid-template-columns: 100%;
-	grid-template-rows: repeat(3, 33.3%);
+	grid-template-rows: repeat(3, 1fr);
 	justify-items: center;
 	align-items: center;
 	z-index: 0;
@@ -39,24 +39,31 @@
 	opacity: 0.9;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 475px) {
+	.direction__item {
+		min-height: 250px;
+	}
+}
+
+@media screen and (min-width: 525px) {
+	.direction__item {
+		min-height: 280px;
+	}
+}
+
+@media screen and (min-width: 768px) {
 	.direction__item {
 		min-height: 300px;
-	}
-
-	.direction__item > .direction__subtitle {
-		visibility: hidden;
-		opacity: 0;
-		transition: visibility 0.1s, opacity ease-out 1s;
-	}
-
-	.direction__item:hover > .direction__subtitle {
-		visibility: visible;
-		opacity: 1;
 	}
 }
 
 @media screen and (min-width: 1024px) {
+	.direction__item {
+		min-height: 350px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
 	.direction__item {
 		min-height: 455px;
 	}
