--- a/blocks/direction/__title/direction__title.css
+++ b/blocks/direction/__title/direction__title.css
@@ -19,6 +19,24 @@
 	color: #000;
 }
 
+@media screen and (min-width: 475px) {
+	.direction__title {
+		font-size: 48px;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.direction__title {
+		font-size: 40px;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.direction__title {
+		font-size: 58px;
+	}
+}
+
 @media screen and (min-width: 1280px) {
 	.direction__title {
 		font-size: 70px;
