--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,3 +1,15 @@
 .footer__menu {
-	margin-bottom: 16px;
+	margin-bottom: 48px;
+}
+
+@media screen and (min-width: 475px) {
+	.footer__menu {
+		margin-bottom: 80px;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.footer__menu {
+		margin-bottom: 0;
+	}
 }
