--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,14 +1,16 @@
 .logo {
+	display: block;
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	max-width: 32px;
+	max-width: 28px;
 	width: 100%;
+	object-fit: fill;
 }
 
 @media screen and (min-width: 768px) {
 	.logo {
-		min-width: 44px;
+		min-width: 36px;
 	}
 }
 
@@ -16,6 +18,5 @@
 	.logo {
 		min-width: 45px;
 		max-height: 60px;
-		object-fit: fill;
 	}
 }
