--- a/blocks/about-me/__title-box/about-me__title-box.css
+++ b/blocks/about-me/__title-box/about-me__title-box.css
@@ -2,7 +2,7 @@
 	grid-area: title-box;
 	display: grid;
 	grid-template-columns: 1fr;
-	grid: template rows 1fr;
+	grid-template-rows: 1fr;
 	row-gap: 24px;
 	align-self: center;
 }
@@ -12,7 +12,6 @@
 		grid-area: title-box;
 		display: grid;
 		grid-template-columns: 1fr;
-		grid: template rows 1fr;
 		row-gap: 48px;
 		align-self: center;
 	}
