--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@
 	background-color: #ccc;
 	display: flex;
 	flex-direction: column;
-	align-items: left;
+	align-items: start;
 }
 
 @media screen and (min-width: 475px) {
