--- a/blocks/direction/__item/direction__item.css
+++ b/blocks/direction/__item/direction__item.css
@@ -1,70 +1,3 @@
 .direction__item {
-	box-sizing: border-box;
-	position: relative;
-	min-height: 200px;
-	display: grid;
-	grid-template-columns: 100%;
-	grid-template-rows: repeat(3, 1fr);
-	justify-items: center;
-	align-items: center;
-	z-index: 0;
-}
-
-.direction__item:nth-of-type(n)::before {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	content: "";
-	z-index: 1;
-	background-color: #ccc;
-	opacity: 0.7;
-	transition: opacity 0.9s ease-out 0s;
-}
-
-.direction__item:nth-of-type(n + 2)::before {
-	background-color: #f66;
-}
-
-.direction__item:nth-of-type(n + 3)::before {
-	background-color: #000;
-}
-
-.direction__item:nth-of-type(n + 4)::before {
-	background-color: #ccc;
-}
-
-.direction__item:hover::before {
-	opacity: 0.9;
-}
-
-@media screen and (min-width: 475px) {
-	.direction__item {
-		min-height: 250px;
-	}
-}
-
-@media screen and (min-width: 525px) {
-	.direction__item {
-		min-height: 280px;
-	}
-}
-
-@media screen and (min-width: 768px) {
-	.direction__item {
-		min-height: 300px;
-	}
-}
-
-@media screen and (min-width: 1024px) {
-	.direction__item {
-		min-height: 350px;
-	}
-}
-
-@media screen and (min-width: 1280px) {
-	.direction__item {
-		min-height: 455px;
-	}
+	background-color: transparent;
 }
