--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,22 +7,30 @@
 	color: #000;
 	display: grid;
 	grid-template-columns: 40px 1fr;
-	grid-template-rows: 1fr;
-	column-gap: 16px;
+	grid-template-rows: min-content;
+	column-gap: 22px;
+	margin: 0;
 	align-items: center;
-	align-self: flex-start;
 }
 
 @media screen and (min-width: 768px) {
 	.footer__copyright {
-		font-size: 32px;
+		font-size: 24px;
+		margin-bottom: 60px;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.footer__copyright {
+		font-size: 30px;
+		column-gap: 40px;
+		margin-bottom: 65px;
 	}
 }
 
 @media screen and (min-width: 1280px) {
 	.footer__copyright {
-		align-self: flex-end;
-		font-size: 36px;
-		column-gap: 40px;
+		font-size: 32px;
+		margin-bottom: 60px;
 	}
 }
