--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,4 @@
 @import url("../blocks/footer/__logo/footer__logo.css");
 @import url("../blocks/footer/__menu-contact/footer__menu-contact.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/footer/__author/footer__author.css");
