--- a/blocks/header/__upper-bar/header__upper-bar.css
+++ b/blocks/header/__upper-bar/header__upper-bar.css
@@ -7,6 +7,7 @@
 	grid-template-columns: repeat(2, 2fr);
 	align-items: center;
 	padding: 16px;
+	column-gap: 16px;
 }
 
 @media screen and (min-width: 475px) {
