--- a/blocks/popups/__header/popups__header.css
+++ b/blocks/popups/__header/popups__header.css
@@ -1,5 +1,5 @@
-.popups {
-  width: 100%;
+.popups__header {
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
