--- a/blocks/popups/__items/popups__items.css
+++ b/blocks/popups/__items/popups__items.css
@@ -5,6 +5,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  column-gap: 20px;
+  row-gap: 100px;
+  justify-items: center;
 }
