--- a/pages/index.css
+++ b/pages/index.css
@@ -1,55 +1,62 @@
-@import url("../vendor/normalize.css");
-@import url("../vendor/fonts.css");
-@import url("../blocks/root/root.css");
-@import url("../blocks/root/__container/root__container.css");
-@import url("../blocks/link/link.css");
-@import url("../blocks/logo/logo.css");
-@import url("../blocks/title/title.css");
-@import url("../blocks/subtitle/subtitle.css");
-@import url("../blocks/text/text.css");
-@import url("../blocks/header/header.css");
-@import url("../blocks/root/__header/root__header.css");
-@import url("../blocks/header/__upper-bar/header__upper-bar.css");
-@import url("../blocks/header/__logo/header__logo.css");
-@import url("../blocks/header/__menu/header__menu.css");
-@import url("../blocks/header/__menu-items/header__menu-items.css");
-@import url("../blocks/portfolio-name/portfolio-name.css");
-@import url("../blocks/header/__title/header__title.css");
-@import url("../blocks/root/__main/root__main.css");
-@import url("../blocks/about-me/about-me.css");
-@import url("../blocks/root/__about-me/root__about-me.css");
-@import url("../blocks/about-me/__image/about-me__image.css");
-@import url("../blocks/about-me/__text-content/about-me__text-content.css");
-@import url("../blocks/about-me/__title/about-me__title.css");
-@import url("../blocks/about-me/__title-box/about-me__title-box.css");
-@import url("../blocks/about-me/__subtitle/about-me__subtitle.css");
-@import url("../blocks/about-me/__text/about-me__text.css");
-@import url("../blocks/direction/direction.css");
-@import url("../blocks/root/__direction/root__direction.css");
-@import url("../blocks/direction/__link/direction__link.css");
-@import url("../blocks/direction/__items/direction__items.css");
-@import url("../blocks/direction/__item/direction__item.css");
+@import url('../vendor/normalize.css');
+@import url('../vendor/fonts.css');
+@import url('../blocks/root/root.css');
+@import url('../blocks/root/__container/root__container.css');
+@import url('../blocks/link/link.css');
+@import url('../blocks/logo/logo.css');
+@import url('../blocks/title/title.css');
+@import url('../blocks/subtitle/subtitle.css');
+@import url('../blocks/text/text.css');
+@import url('../blocks/button/button.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/root/__header/root__header.css');
+@import url('../blocks/header/__upper-bar/header__upper-bar.css');
+@import url('../blocks/header/__menu/header__menu.css');
+@import url('../blocks/header/__menu-items/header__menu-items.css');
+@import url('../blocks/portfolio-name/portfolio-name.css');
+@import url('../blocks/header/__title/header__title.css');
+@import url('../blocks/root/__main/root__main.css');
+@import url('../blocks/about-me/about-me.css');
+@import url('../blocks/root/__about-me/root__about-me.css');
+@import url('../blocks/about-me/__image/about-me__image.css');
+@import url('../blocks/about-me/__text-content/about-me__text-content.css');
+@import url('../blocks/about-me/__title/about-me__title.css');
+@import url('../blocks/about-me/__title-box/about-me__title-box.css');
+@import url('../blocks/about-me/__subtitle/about-me__subtitle.css');
+@import url('../blocks/about-me/__text/about-me__text.css');
+@import url('../blocks/direction/direction.css');
+@import url('../blocks/root/__direction/root__direction.css');
+@import url('../blocks/direction/__link/direction__link.css');
+@import url('../blocks/direction/__items/direction__items.css');
+@import url('../blocks/direction/__item/direction__item.css');
 
-@import url("../blocks/direction/__image/direction__image.css");
-@import url("../blocks/direction/__title/direction__title.css");
-@import url("../blocks/direction/__subtitle.css/direction__subtitle.css");
-@import url("../blocks/footer/footer.css");
-@import url("../blocks/root/__footer/page__footer.css");
-@import url("../blocks/footer/__menu/footer__menu.css");
-@import url("../blocks/footer/__menu-contacts/footer__menu-contacts.css");
-@import url("../blocks/footer/__menu-item/footer__menu-item.css");
-@import url("../blocks/footer/__link/footer__link.css");
-@import url("../blocks/footer/__logo/footer__logo.css");
-@import url("../blocks/footer/__menu-contact/footer__menu-contact.css");
-@import url("../blocks/footer/__copyright/footer__copyright.css");
-@import url("../blocks/footer/__author/footer__author.css");
-@import url("../blocks/popups/popups.css");
-@import url("../blocks/popups/__popup/popups__popup.css");
-@import url("../blocks/popups/__modal-windows/popups__modal-windows.css");
-@import url("../blocks/popups/__popup/popups__popup_show_photo.css");
-@import url("../blocks/popups/__items/popups__items.css");
-@import url("../blocks/popups/__item/popups__item.css");
-@import url("../blocks/popups/__image/popups__image.css");
-@import url("../blocks/popups/__title/popups__title.css");
-@import url("../blocks/popups/__subtitle/popups__subtitle.css");
-@import url("../blocks/popups/__item-technology/popups__item-technology.css");
+@import url('../blocks/direction/__image/direction__image.css');
+@import url('../blocks/direction/__title/direction__title.css');
+@import url('../blocks/direction/__subtitle.css/direction__subtitle.css');
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/root/__footer/page__footer.css');
+@import url('../blocks/footer/__menu/footer__menu.css');
+@import url('../blocks/footer/__menu-contacts/footer__menu-contacts.css');
+@import url('../blocks/footer/__menu-item/footer__menu-item.css');
+@import url('../blocks/footer/__link/footer__link.css');
+@import url('../blocks/footer/__logo/footer__logo.css');
+@import url('../blocks/footer/__menu-contact/footer__menu-contact.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
+@import url('../blocks/footer/__author/footer__author.css');
+@import url('../blocks/popups/popups.css');
+@import url('../blocks/popups/__popup/popups__popup.css');
+@import url('../blocks/popups/__header/popups__header.css');
+@import url('../blocks/popups/__modal-windows/popups__modal-windows.css');
+@import url('../blocks/popups/__close-button/popups__close-button.css');
+@import url('../blocks/popups/__navigation/popups__navigation.css');
+@import url('../blocks/popups/__menu/popups__menu.css');
+@import url('../blocks/popups/__menu-item/popups__menu-item.css');
+@import url('../blocks/popups/__menu-button/popups__menu-button.css');
+@import url('../blocks/popups/__popup/_show_photo.css/popups__popup_show_photo.css');
+@import url('../blocks/popups/__items/popups__items.css');
+@import url('../blocks/popups/__item/popups__item.css');
+@import url('../blocks/popups/__image/popups__image.css');
+@import url('../blocks/popups/__text-content/popups__text-content.css');
+@import url('../blocks/popups/__title/popups__title.css');
+@import url('../blocks/popups/__subtitle/popups__subtitle.css');
+@import url('../blocks/popups/__item-technology/popups__item-technology.css');
